modeify the urls

--- a/templates/about.html
+++ b/templates/about.html
@@ -97,7 +97,7 @@
 
             </li>
         </ul>
-        <a href="../index"
+        <a href="../"
             style="display: flex;flex-direction: row;align-items: center;justify-content: center;"><button>返回</button></a>
     </div>
 </body>
