--- a/templates/help.html
+++ b/templates/help.html
@@ -94,7 +94,7 @@
 </body>
 
 <script>
-    document.querySelector("#return").addEventListener("click", () => window.location = "../index");
+    document.querySelector("#return").addEventListener("click", () => window.location = "../");
 </script>
 
 </html>
