--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>打地鼠小游戏</title>
     <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
+    <link rel="icon" href="https://img2.baidu.com/it/u=1103029615,259143064&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=500">
     <style>
         span {
             float: left;
