--- a/templates/help.html
+++ b/templates/help.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://img2.baidu.com/it/u=1103029615,259143064&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=500">
     <title>打地鼠小游戏 - 帮助介绍</title>
     <style>
         body {
