--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://img2.baidu.com/it/u=1103029615,259143064&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=500">
-    <title>Document</title>
+    <title>关于游戏</title>
 
     <style>
         body {
